[package]
name = "rust_web_scrape"
version = "1.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.29.1", features = ["full"]}
reqwest = "0.11.7"
scraper = "0.17.1"
serde = {version = "1.0.177", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
