[package]
name = "web-scrape-newsnation"
version = "1.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.29.1", features = ["full"]}
reqwest = "0.11.22"
scraper = "0.18.1"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
chrono = "0.4.31"
